# sample-well-architected-skills-and-steering

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Config  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  llms.txt  skills.sh.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
adapters/amp/: AGENTS.md
adapters/claude-code/: CLAUDE.md
adapters/cline/: .clinerules
adapters/codex/: AGENTS.md
adapters/devops-agent/: README.md
adapters/gemini-cli/: GEMINI.md
adapters/junie/: guidelines.md
adapters/openclaw/: AGENTS.md
adapters/windsurf/: .windsurfrules
assets/: cloudwatch-metrics-reference.md  incident-investigation-patterns.md  skill-authoring-guide.md  well-architected-best-practices.md
evals/: .gitignore  benchmark.py  benchmark_config.yaml  benchmark_report.py  config.yaml  grade.py  list_models.py  pyproject.toml  report.py  run.py
evals/cli_effectiveness/: README.md  measure_aws_knowledge_mcp.py  measure_codex.py  measure_mcp.py  plot_study.py
evals/tests/: test_grade.py  test_report.py  test_run.py  test_triggering.py
examples/insecure-serverless-app-cdk/: README.md  cdk.json  package.json  tsconfig.json
examples/insecure-serverless-app-terraform/: README.md  main.tf  outputs.tf  variables.tf
powers/wa-review/: POWER.md
scripts/: crawl-wa-framework.py  generate-manifest.py  generate-pillar-merged.py
skills/architecture-decision-record/: SKILL.md  metadata.json
skills/cost-optimization-audit/: SKILL.md
skills/cost-optimization-review/: SKILL.md  (+1 more)
steering/: well-architected.md
(+948 files in other folders)
